crates/wac-parser/tests/resolution/fail/invalid-func-type-ref.wac
package test:comp;

type x = u32;

interface i {
    x: x;
}